# hybridclaw

./: .confidential.example.yml  .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  TRUST_MODEL.md  biome.json  config.example.json  flake.nix  npm-shrinkwrap.json  package-lock.json  package.json  plugin-sdk.js  tsconfig.json  vitest.config.ts  vitest.e2e.config.ts  vitest.integration.config.ts  vitest.live.config.ts  vitest.unit.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.husky/: pre-commit
badge/: coverage.json
console/: README.md  design-system-contract.test.ts  index.html  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts  vitest.setup.ts
container/: Dockerfile  npm-shrinkwrap.json  package-lock.json  package.json
plugins/skill-evolver/: hybridclaw.plugin.yaml  package.json  pyproject.toml
plugins/skill-evolver/python/skill_evolver/: __init__.py  __main__.py  cli.py  constraints.py  evolve.py  report.py  skill_module.py  tui.py
plugins/skill-evolver/python/skill_evolver/dataset/: __init__.py  golden.py  merge.py  synthetic.py  traces.py
plugins/skill-evolver/python/skill_evolver/fitness/: __init__.py  classifier.py  executor.py
plugins/skill-evolver/python/skill_evolver/targets/: __init__.py  body.py  description.py  joint.py
plugins/skill-evolver/src/: apply-variant.js  index.js  python-bridge.js  skill-locator.js  trace-extractor.js
plugins/skill-evolver/tests/: test_skill_module.py
(+2753 files in other folders)
